# Smol_project-Owo

./: Makefile  README.md  hello3ds.3dsx  hello3ds.elf  hello3ds.smdh
LAST_RUN/: LAST_RUN.txt
LAST_RUN/PATCH_003_UI_Y_HARD_FIX/file1 (the-worlds-hardest-game).swf/: boottrace.txt  build_info.txt  last_stage.txt  status_snapshot.txt
PATCH_009_MASKS/file1 (the-worlds-hardest-game).swf/: boottrace.txt  build_info.txt  last_stage.txt  status_snapshot.txt
PATCH_009_MASKS/file2 (bloonstd).swf/: boottrace.txt  build_info.txt  last_stage.txt
PATCH_009_MASKS/file3 (redkanga).swf/: boottrace.txt  build_info.txt  last_stage.txt
docs/: Architecture.md  Next_Step_Notes.md  Project_Guide.md  Regression_Suite.md  SD_Run_Artifacts.md  Update_Notes.md  Workflow.md
include/: bridge.h  sd_browser.h  swf_info.h  swf_parse.h  swf_tags.h
rust/bridge/: Cargo.toml
rust/bridge/src/: lib.rs  renderer.rs  runlog.rs
rust/bridge/src/engine/: mod.rs
rust/bridge/src/ffi/: exports.rs  fileio.rs  mod.rs  types.rs
rust/bridge/src/render/: executor.rs  frame.rs  mod.rs  shared.rs
rust/bridge/src/render/cache/: bitmaps.rs  mod.rs  shapes.rs
rust/bridge/src/render/device/: fb3ds.rs  mod.rs
rust/bridge/src/ruffle_adapter/: mod.rs  tessellate.rs  threed_backend.rs
rust/bridge/src/runlog/: full.rs  mod.rs  stub.rs
rust/bridge/src/util/: config.rs  logging.rs  mod.rs
scripts/: pin_ruffle_rev.ps1  pin_ruffle_rev.sh
source/: file_selector.c  file_selector.h  gpu_test_renderer.c  gpu_test_renderer.h  gpu_test_shader.v.pica  main.c  sd_browser.c  swf_info.c  swf_parse.c  swf_tags.c
