[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
# Bisect plan: build with e.g. `--no-default-features --features navigator` or
# `--no-default-features --features storage` to isolate TLS-heavy subsystems.
# Default keeps current behavior.
default = []
runlog = []
legacy_sw_render = []
verbose_logs = []
net = ["async-channel", "indexmap"]
storage = []
video = []

[dependencies]
# Ruffle crates
# Pinned to a known nightly tag for API stability.
#
# Why: Upstream changes have already broken this project (Bitmap dims accessors, DrawPath layout).
# Pinning stabilizes development and lets us progressively replace Debug-based parsing with real
# command inspection.
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", tag = "nightly-2025-12-27", default-features = false }
ruffle_render = { git = "https://github.com/ruffle-rs/ruffle", tag = "nightly-2025-12-27", default-features = false }
ruffle_video = { git = "https://github.com/ruffle-rs/ruffle", tag = "nightly-2025-12-27", default-features = false }

# Used at shape registration time to triangulate polygons-with-holes (fills only).
earcutr = "0.4"

# Dependencies for the Backend
url = "2.5"
indexmap = { version = "2.2", optional = true }
async-channel = { version = "2.3", optional = true }
log = "0.4"
encoding_rs = "0.8"

# For parsing CWS (zlib-compressed) SWFs to extract SetBackgroundColor.
miniz_oxide = "0.8"
